added link to whatsapp chat

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <a href="#dept">Departemen</a>
         <a href="#contact">Kontak</a>
         <a href="https://www.gencarlca.com/" target="_blank">Daftar Relawan</a>
+        <a href="https://www.gencarlca.com/" target="_blank">Galeri</a><a href="https://gencarlca.id/Portal" target="_blank">Portal</a>
       </div>
 
       <div class="navbar-extra">
@@ -49,7 +50,7 @@
       <main class="content">
         <h1>Anda ingin bisa baca <span>Al-Qur'an</span>?</h1>
         <p>Ikutilah GENCAR (Gerakan Cerdas Baca Al Qur'an)</p>
-        <a href="#" class="cta"
+        <a href="https://wa.me/6285846016660?text=Assalamualaikum,%20admin.." class="cta"
           ><i class="fab fa-whatsapp"></i></i> Hubungi
           Kami</a
         >
@@ -161,12 +162,12 @@
         <a href="https://www.facebook.com/cerdasalquran" target="_blank"><i data-feather="facebook"></i></a>
         <a href="https://www.youtube.com/user/cerdaslca" target="_blank"><i data-feather="youtube"></i></a>
       </div>
-
+      
       <div class="links">
         <a href="#home">Home</a>
-        <a href="">Tentang Kami</a>
-        <a href="">Departemen</a>
-        <a href="">Kontak</a>
+        <a href="#about">Tentang Kami</a>
+        <a href="#dept">Departemen</a>
+        <a href="#contact">Kontak</a>
       </div>
 
       <div class="credit">
