--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
         <a href="#dept">Departemen</a>
         <a href="#contact">Kontak</a>
         <a href="https://www.gencarlca.com/" target="_blank">Daftar Relawan</a>
-        <a href="https://www.gencarlca.com/" target="_blank">Galeri</a><a href="https://gencarlca.id/Portal" target="_blank">Portal</a>
-      </div>
+        <a href="https://www.gencarlca.com/" target="_blank">Galeri</a>
+        <a href="https://gencarlca.id/Portal" target="_blank">Portal</a>
+      </div>  
 
       <div class="navbar-extra">
         <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
@@ -50,7 +51,7 @@
       <main class="content">
         <h1>Anda ingin bisa baca <span>Al-Qur'an</span>?</h1>
         <p>Ikutilah GENCAR (Gerakan Cerdas Baca Al Qur'an)</p>
-        <a href="https://wa.me/6285846016660?text=Assalamualaikum,%20admin.." class="cta"
+        <a href="https://wa.me/6285846016660?text=Assalamualaikum,%20admin.." target="_blank" class="cta"
           ><i class="fab fa-whatsapp"></i></i> Hubungi
           Kami</a
         >
