--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gencar LCA</title>
+    <title>Lembaga Cerdas Al-Qur'an</title>
+    <link rel="icon" type="image/x-icon" href="img/logo-navbar.png">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
